Added items and blocks

--- a/src/main/resources/assets/luzamod/lang/en_us.json
+++ b/src/main/resources/assets/luzamod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.luzamod.raw_citrine": "Raw Citrine",
 
   "block.luzamod.citrine_block": "Citrine Block",
+  "block.luzamod.egg_bed": "Egg Bed",
 
   "itemGroup.luzamodtab": "Luzamod"
 }
