--- a/src/main/resources/assets/tcustombeds/lang/en_us.json
+++ b/src/main/resources/assets/tcustombeds/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "block.tcustombeds.egg_bed": "Egg Bed",
-
   "block.tcustombeds.vegi_egg_bed": "Vegi Egg Bed",
+  "block.tcustombeds.arch_egg_bed": "Archeleon Egg Bed",
 
   "itemGroup.tcustombedstab": "TSMP Custom Beds"
 }
